--- a/weeklymovie/app.json
+++ b/weeklymovie/app.json
@@ -13,18 +13,22 @@
     "enablePullDownRefresh": false
   },
   "tabBar": {
-    "list": [{
-      "pagePath": "pages/about/about",
-      "text": "关于",
-      "iconPath": "images/icons/about.png",
-      "selectedIconPath": "images/icons/about-selected.png"
-    },{
-      "pagePath": "pages/weekly/weekly",
-      "text": "每周推荐",
-      "iconPath": "images/icons/weekly.png",
-      "selectedIconPath": "images/icons/weekly-selected.png"
-    }],
-    "color":"#000",
+    "list": [
+      {
+        "pagePath": "pages/about/about",
+        "text": "关于",
+        "iconPath": "images/icons/about.png",
+        "selectedIconPath": "images/icons/about-selected.png"
+      },
+      {
+        "pagePath": "pages/weekly/weekly",
+        "text": "每周推荐",
+        "iconPath": "images/icons/weekly.png",
+        "selectedIconPath": "images/icons/weekly-selected.png"
+      }
+    ],
+    "color": "#000",
     "selectedColor": "#00f"
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
